--- a/docroot/modules/custom/ymca_retention/config/install/page_manager.page_variant.ymca_retention_challenge_upcoming.yml
+++ b/docroot/modules/custom/ymca_retention/config/install/page_manager.page_variant.ymca_retention_challenge_upcoming.yml
@@ -18,7 +18,7 @@ variant_settings:
   weight: 0
   layout: onecol
   layout_settings: {  }
-  page_title: ''
+  page_title: 'Y Recharge 2017'
   storage_type: page_manager
   storage_id: ymca_retention_challenge_pages-panels_variant-0
   builder: standard
