--- a/config/install/system.site.yml
+++ b/config/install/system.site.yml
@@ -4,7 +4,7 @@ slogan: ''
 page:
   403: ''
   404: ''
-  front: ''
+  front: '/openy'
 admin_compact_mode: false
 weight_select_max: 100
 langcode: en
