--- a/modules/openy_features/openy_node/modules/openy_node_class/config/install/core.entity_view_display.node.class.default.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_class/config/install/core.entity_view_display.node.class.default.yml
@@ -2,9 +2,11 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.class.field_bottom_content
     - field.field.node.class.field_class_activity
     - field.field.node.class.field_class_description
     - field.field.node.class.field_content
+    - field.field.node.class.field_header_content
     - field.field.node.class.field_meta_tags
     - field.field.node.class.field_sidebar_content
     - node.type.class
@@ -18,41 +20,67 @@ targetEntityType: node
 bundle: class
 mode: default
 content:
+  field_bottom_content:
+    weight: 5
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    type: entity_reference_revisions_entity_view
+    region: content
   field_class_activity:
-    weight: 101
-    label: above
+    weight: 1
+    label: hidden
     settings:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
+    region: content
   field_class_description:
-    weight: 102
-    label: above
+    weight: 3
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
+    region: content
   field_content:
-    weight: 103
-    label: above
+    weight: 4
+    label: hidden
     settings:
       view_mode: default
       link: ''
     third_party_settings: {  }
     type: entity_reference_revisions_entity_view
+    region: content
+  field_header_content:
+    weight: 2
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    type: entity_reference_revisions_entity_view
+    region: content
   field_meta_tags:
-    weight: 105
-    label: above
+    weight: 7
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: metatag_empty_formatter
+    region: content
   field_sidebar_content:
-    weight: 104
-    label: above
+    weight: 6
+    label: hidden
     settings:
       view_mode: default
       link: ''
     third_party_settings: {  }
     type: entity_reference_revisions_entity_view
+    region: content
   links:
-    weight: 100
+    weight: 0
+    region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden: {  }
