--- a/modules/openy_features/openy_node/modules/openy_node_class/config/install/core.entity_view_display.node.class.teaser.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_class/config/install/core.entity_view_display.node.class.teaser.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.class.field_class_activity
     - field.field.node.class.field_class_description
     - field.field.node.class.field_content
+    - field.field.node.class.field_meta_tags
     - field.field.node.class.field_sidebar_content
     - node.type.class
   module:
@@ -23,8 +24,10 @@ content:
     settings:
       trim_length: 150
     third_party_settings: {  }
+    region: content
 hidden:
   field_class_activity: true
   field_content: true
+  field_meta_tags: true
   field_sidebar_content: true
   links: true
