--- a/openy_prgf_all_events/config/install/views.view.events.yml
+++ b/openy_prgf_all_events/config/install/views.view.events.yml
@@ -50,13 +50,13 @@ display:
       pager:
         type: full
         options:
-          items_per_page: 10
+          items_per_page: 4
           offset: 0
           id: 0
           total_pages: null
           tags:
-            previous: ‹‹
-            next: ››
+            previous: «
+            next: »
             first: '« First'
             last: 'Last »'
           expose:
