--- a/openy_group_schedules.routing.yml
+++ b/openy_group_schedules.routing.yml
@@ -19,3 +19,10 @@ openy_group_schedules.all_schedules_search_results:
     _title: Group exercise search results
   requirements:
     _permission: access content
+openy_group_schedules.settings:
+  path: /admin/config/openy_group_schedules/settings
+  defaults:
+    _form: \Drupal\openy_group_schedules\Form\GroupexSettingsForm
+    _title: GroupEx settings
+  requirements:
+    _permission: 'administer site configuration'
