--- a/openy_prgf_3c/config/install/core.entity_view_display.paragraph.3c.default.yml
+++ b/openy_prgf_3c/config/install/core.entity_view_display.paragraph.3c.default.yml
@@ -16,7 +16,7 @@ content:
     weight: 2
     label: hidden
     settings:
-      view_mode: trimmed
+      view_mode: full
       link: false
     third_party_settings: {  }
     type: entity_reference_entity_view
@@ -24,7 +24,7 @@ content:
     weight: 1
     label: hidden
     settings:
-      view_mode: trimmed
+      view_mode: full
       link: false
     third_party_settings: {  }
     type: entity_reference_entity_view
@@ -32,7 +32,7 @@ content:
     weight: 3
     label: hidden
     settings:
-      view_mode: trimmed
+      view_mode: full
       link: false
     third_party_settings: {  }
     type: entity_reference_entity_view
