--- a/modules/openy_features/openy_prgf/modules/openy_prgf_schedule_search/config/install/core.entity_view_display.paragraph.schedule_search_form.default.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_schedule_search/config/install/core.entity_view_display.paragraph.schedule_search_form.default.yml
@@ -2,13 +2,13 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.schedule_search.field_prgf_block
-    - paragraphs.paragraphs_type.schedule_search
+    - field.field.paragraph.schedule_search_form.field_prgf_block
+    - paragraphs.paragraphs_type.schedule_search_form
   module:
     - plugin
-id: paragraph.schedule_search.default
+id: paragraph.schedule_search_form.default
 targetEntityType: paragraph
-bundle: schedule_search
+bundle: schedule_search_form
 mode: default
 content:
   field_prgf_block:
