--- a/modules/openy_features/openy_user/config/install/user.role.editor.yml
+++ b/modules/openy_features/openy_user/config/install/user.role.editor.yml
@@ -29,6 +29,7 @@ permissions:
   - 'create blog_post content'
   - 'create branch content'
   - 'create camp content'
+  - 'create class content'
   - 'create facility content'
   - 'create landing_page content'
   - 'create media'
@@ -40,6 +41,7 @@ permissions:
   - 'delete any blog_post content'
   - 'delete any branch content'
   - 'delete any camp content'
+  - 'delete any class content'
   - 'delete any facility content'
   - 'delete any landing_page content'
   - 'delete any media'
@@ -52,6 +54,7 @@ permissions:
   - 'delete own blog_post content'
   - 'delete own branch content'
   - 'delete own camp content'
+  - 'delete own class content'
   - 'delete own facility content'
   - 'delete own landing_page content'
   - 'delete own membership content'
@@ -68,6 +71,7 @@ permissions:
   - 'edit any blog_post content'
   - 'edit any branch content'
   - 'edit any camp content'
+  - 'edit any class content'
   - 'edit any facility content'
   - 'edit any landing_page content'
   - 'edit any membership content'
@@ -79,6 +83,7 @@ permissions:
   - 'edit own blog_post content'
   - 'edit own branch content'
   - 'edit own camp content'
+  - 'edit own class content'
   - 'edit own facility content'
   - 'edit own landing_page content'
   - 'edit own membership content'
@@ -96,6 +101,7 @@ permissions:
   - 'revert blog_post revisions'
   - 'revert branch revisions'
   - 'revert camp revisions'
+  - 'revert class revisions'
   - 'revert facility revisions'
   - 'revert landing_page revisions'
   - 'revert membership revisions'
@@ -137,6 +143,7 @@ permissions:
   - 'view blog_post revisions'
   - 'view branch revisions'
   - 'view camp revisions'
+  - 'view class revisions'
   - 'view facility revisions'
   - 'view landing_page revisions'
   - 'view latest version'
