--- a/modules/openy_features/openy_location/modules/openy_loc_branch/config/install/core.entity_form_display.node.branch.default.yml
+++ b/modules/openy_features/openy_location/modules/openy_loc_branch/config/install/core.entity_form_display.node.branch.default.yml
@@ -125,6 +125,7 @@ content:
     weight: 7
     settings: {  }
     third_party_settings: {  }
+    region: content
   field_bottom_content:
     type: entity_reference_paragraphs
     weight: 26
@@ -135,11 +136,13 @@ content:
       add_mode: dropdown
       form_display_mode: default
     third_party_settings: {  }
+    region: content
   field_branch_hours:
     weight: 3
     settings: {  }
     third_party_settings: {  }
     type: openy_custom_hours_default
+    region: content
   field_content:
     type: entity_reference_paragraphs
     weight: 5
@@ -150,6 +153,7 @@ content:
       add_mode: dropdown
       form_display_mode: default
     third_party_settings: {  }
+    region: content
   field_header_content:
     type: entity_reference_paragraphs
     weight: 4
@@ -160,12 +164,14 @@ content:
       add_mode: dropdown
       form_display_mode: default
     third_party_settings: {  }
+    region: content
   field_location_address:
     weight: 10
     settings:
       default_country: null
     third_party_settings: {  }
     type: address_default
+    region: content
   field_location_area:
     weight: 2
     settings:
@@ -174,11 +180,13 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: entity_reference_autocomplete
+    region: content
   field_location_coordinates:
     weight: 11
     settings: {  }
     third_party_settings: {  }
     type: geolocation_latlng
+    region: content
   field_location_directions:
     weight: 17
     settings:
@@ -186,6 +194,7 @@ content:
       placeholder_title: ''
     third_party_settings: {  }
     type: link_default
+    region: content
   field_location_email:
     weight: 16
     settings:
@@ -193,24 +202,28 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: email_default
+    region: content
   field_location_fax:
     weight: 15
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: telephone_default
+    region: content
   field_location_phone:
     weight: 14
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: telephone_default
+    region: content
   field_location_state:
     weight: 3
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
+    region: content
   field_location_temp_url:
     weight: 4
     settings:
@@ -218,28 +231,33 @@ content:
       placeholder_title: ''
     third_party_settings: {  }
     type: link_default
+    region: content
   field_meta_tags:
     weight: 26
     settings: {  }
     third_party_settings: {  }
     type: metatag_firehose
+    region: content
   path:
     type: path
     weight: 10
     settings: {  }
     third_party_settings: {  }
+    region: content
   promote:
     type: boolean_checkbox
     settings:
       display_label: true
     weight: 8
     third_party_settings: {  }
+    region: content
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
     weight: 9
     third_party_settings: {  }
+    region: content
   title:
     type: string_textfield
     weight: 1
@@ -247,6 +265,7 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    region: content
   uid:
     type: entity_reference_autocomplete
     weight: 6
@@ -255,4 +274,5 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    region: content
 hidden: {  }
