--- a/modules/openy_features/openy_location/modules/openy_loc_branch/config/install/core.entity_view_display.node.branch.class_location.yml
+++ b/modules/openy_features/openy_location/modules/openy_loc_branch/config/install/core.entity_view_display.node.branch.class_location.yml
@@ -2,6 +2,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.node.class_location
     - field.field.node.branch.field_bottom_content
     - field.field.node.branch.field_branch_hours
     - field.field.node.branch.field_content
@@ -19,50 +20,21 @@ dependencies:
     - node.type.branch
   module:
     - address
-    - entity_reference_revisions
-    - geolocation
-    - metatag
+    - link
     - openy_field_custom_hours
     - telephone
     - user
-id: node.branch.default
+id: node.branch.class_location
 targetEntityType: node
 bundle: branch
-mode: default
+mode: class_location
 content:
-  field_bottom_content:
-    type: entity_reference_revisions_entity_view
-    weight: 7
-    label: hidden
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
-    region: content
   field_branch_hours:
-    weight: 6
-    label: above
+    weight: 3
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: openy_custom_hours_default
-    region: content
-  field_content:
-    type: entity_reference_revisions_entity_view
-    weight: 3
-    label: hidden
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
-    region: content
-  field_header_content:
-    type: entity_reference_revisions_entity_view
-    weight: 2
-    label: hidden
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
     region: content
   field_location_address:
     weight: 0
@@ -71,13 +43,18 @@ content:
     third_party_settings: {  }
     type: address_plain
     region: content
-  field_location_coordinates:
-    weight: 5
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: geolocation_latlng
+  field_location_directions:
+    type: link
+    weight: 2
     region: content
+    label: hidden
+    settings:
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
+    third_party_settings: {  }
   field_location_phone:
     weight: 1
     label: hidden
@@ -86,18 +63,15 @@ content:
     third_party_settings: {  }
     type: telephone_link
     region: content
-  field_meta_tags:
-    weight: 7
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: metatag_empty_formatter
-    region: content
 hidden:
+  field_bottom_content: true
+  field_content: true
+  field_header_content: true
   field_location_area: true
-  field_location_directions: true
+  field_location_coordinates: true
   field_location_email: true
   field_location_fax: true
   field_location_state: true
   field_location_temp_url: true
+  field_meta_tags: true
   links: true
