--- a/modules/openy_features/openy_location/modules/openy_loc_camp/config/install/core.entity_form_display.node.camp.default.yml
+++ b/modules/openy_features/openy_location/modules/openy_loc_camp/config/install/core.entity_form_display.node.camp.default.yml
@@ -106,6 +106,7 @@ content:
     weight: 6
     settings: {  }
     third_party_settings: {  }
+    region: content
   field_bottom_content:
     weight: 26
     settings:
@@ -116,6 +117,7 @@ content:
       form_display_mode: default
     third_party_settings: {  }
     type: entity_reference_paragraphs
+    region: content
   field_camp_menu_links:
     weight: 2
     settings:
@@ -123,6 +125,7 @@ content:
       placeholder_title: 'Camp subpage title'
     third_party_settings: {  }
     type: link_default
+    region: content
   field_content:
     weight: 3
     settings:
@@ -133,6 +136,7 @@ content:
       form_display_mode: default
     third_party_settings: {  }
     type: entity_reference_paragraphs
+    region: content
   field_header_content:
     weight: 4
     settings:
@@ -143,17 +147,20 @@ content:
       form_display_mode: default
     third_party_settings: {  }
     type: entity_reference_paragraphs
+    region: content
   field_location_address:
     weight: 7
     settings:
       default_country: null
     third_party_settings: {  }
     type: address_default
+    region: content
   field_location_coordinates:
     weight: 8
     settings: {  }
     third_party_settings: {  }
     type: geolocation_latlng
+    region: content
   field_location_directions:
     weight: 14
     settings:
@@ -161,6 +168,7 @@ content:
       placeholder_title: 'Location directions title'
     third_party_settings: {  }
     type: link_default
+    region: content
   field_location_email:
     weight: 13
     settings:
@@ -168,40 +176,47 @@ content:
       placeholder: location_email@example.com
     third_party_settings: {  }
     type: email_default
+    region: content
   field_location_fax:
     weight: 12
     settings:
       placeholder: '0123456789'
     third_party_settings: {  }
     type: telephone_default
+    region: content
   field_location_phone:
     weight: 11
     settings:
       placeholder: '0123456789'
     third_party_settings: {  }
     type: telephone_default
+    region: content
   field_meta_tags:
     weight: 26
     settings: {  }
     third_party_settings: {  }
     type: metatag_firehose
+    region: content
   path:
     type: path
     weight: 9
     settings: {  }
     third_party_settings: {  }
+    region: content
   promote:
     type: boolean_checkbox
     settings:
       display_label: true
     weight: 7
     third_party_settings: {  }
+    region: content
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
     weight: 8
     third_party_settings: {  }
+    region: content
   title:
     type: string_textfield
     weight: 1
@@ -209,6 +224,7 @@ content:
       size: 60
       placeholder: 'Provide a title here'
     third_party_settings: {  }
+    region: content
   uid:
     type: entity_reference_autocomplete
     weight: 5
@@ -217,4 +233,5 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    region: content
 hidden: {  }
