--- a/modules/openy_features/openy_location/modules/openy_loc_camp/config/install/core.entity_view_display.node.camp.default.yml
+++ b/modules/openy_features/openy_location/modules/openy_loc_camp/config/install/core.entity_view_display.node.camp.default.yml
@@ -34,6 +34,7 @@ content:
       link: ''
     third_party_settings: {  }
     type: entity_reference_revisions_entity_view
+    region: content
   field_content:
     weight: 4
     label: hidden
@@ -42,6 +43,7 @@ content:
       link: ''
     third_party_settings: {  }
     type: entity_reference_revisions_entity_view
+    region: content
   field_header_content:
     weight: 3
     label: hidden
@@ -50,18 +52,21 @@ content:
       link: ''
     third_party_settings: {  }
     type: entity_reference_revisions_entity_view
+    region: content
   field_location_address:
     weight: 0
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: address_plain
+    region: content
   field_location_coordinates:
     weight: 5
     label: above
     settings: {  }
     third_party_settings: {  }
     type: geolocation_latlng
+    region: content
   field_location_fax:
     weight: 2
     label: hidden
@@ -69,6 +74,7 @@ content:
       title: ''
     third_party_settings: {  }
     type: telephone_link
+    region: content
   field_location_phone:
     weight: 1
     label: hidden
@@ -76,12 +82,14 @@ content:
       title: ''
     third_party_settings: {  }
     type: telephone_link
+    region: content
   field_meta_tags:
     weight: 6
     label: above
     settings: {  }
     third_party_settings: {  }
     type: metatag_empty_formatter
+    region: content
 hidden:
   field_camp_menu_links: true
   field_location_directions: true
