--- a/modules/openy_features/openy_location/modules/openy_loc_camp/config/install/core.entity_view_display.node.camp.teaser.yml
+++ b/modules/openy_features/openy_location/modules/openy_loc_camp/config/install/core.entity_view_display.node.camp.teaser.yml
@@ -3,6 +3,7 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
+    - field.field.node.camp.field_bottom_content
     - field.field.node.camp.field_camp_menu_links
     - field.field.node.camp.field_content
     - field.field.node.camp.field_header_content
@@ -12,6 +13,7 @@ dependencies:
     - field.field.node.camp.field_location_email
     - field.field.node.camp.field_location_fax
     - field.field.node.camp.field_location_phone
+    - field.field.node.camp.field_meta_tags
     - node.type.camp
   module:
     - address
@@ -29,6 +31,7 @@ content:
     label: hidden
     settings: {  }
     third_party_settings: {  }
+    region: content
   field_location_directions:
     type: link
     weight: 2
@@ -40,6 +43,7 @@ content:
       rel: ''
       target: ''
     third_party_settings: {  }
+    region: content
   field_location_phone:
     type: telephone_link
     weight: 1
@@ -47,11 +51,14 @@ content:
     settings:
       title: ''
     third_party_settings: {  }
+    region: content
 hidden:
+  field_bottom_content: true
   field_camp_menu_links: true
   field_content: true
   field_header_content: true
   field_location_coordinates: true
   field_location_email: true
   field_location_fax: true
+  field_meta_tags: true
   links: true
