[OYPD-357] Unset schedule_search_form on field_sidebar_content and schedule_search_list on field_sidebar_content & field_header_content.

--- a/modules/openy_features/openy_prgf/config/install/openy_prgf.settings.yml
+++ b/modules/openy_features/openy_prgf/config/install/openy_prgf.settings.yml
@@ -19,6 +19,8 @@ fields_unset_paragraphs:
     - openy_prgf_mbrshp_calc
     - membership_info
     - session_time
+    - schedule_search_form
+    - schedule_search_list
     - teaser
   field_header_content:
     - blog_posts_listing
@@ -35,6 +37,7 @@ fields_unset_paragraphs:
     - openy_prgf_mbrshp_calc
     - membership_info
     - session_time
+    - schedule_search_list
     - teaser
     - promo_card
     - story_card
