--- a/modules/openy_features/openy_prgf/config/install/openy_prgf.settings.yml
+++ b/modules/openy_features/openy_prgf/config/install/openy_prgf.settings.yml
@@ -56,6 +56,7 @@ fields_unset_paragraphs:
     - openy_prgf_mbrshp_calc
     - membership_info
     - session_time
+    - schedule_search_form
     - teaser
     - promo_card
     - story_card
@@ -65,3 +66,4 @@ fields_unset_paragraphs:
     - session_time
     - promo_card
     - story_card
+    - schedule_search_form
