[YGH-541] Add webform uuid

--- a/openy_prgf_tour_schedule/config/install/webform.webform.tour_schedule.yml
+++ b/openy_prgf_tour_schedule/config/install/webform.webform.tour_schedule.yml
@@ -1,6 +1,9 @@
+uuid: 1ca3a152-0062-4233-b7ed-36131647960e
 langcode: en
 status: open
 dependencies: {  }
+_core:
+  default_config_hash: null
 open: null
 close: null
 uid: 1
