[YGH-541] Make field translatable

--- a/openy_prgf_tour_schedule/config/install/field.field.paragraph.tour_schedule.field_prgf_tour_schedule.yml
+++ b/openy_prgf_tour_schedule/config/install/field.field.paragraph.tour_schedule.field_prgf_tour_schedule.yml
@@ -14,7 +14,7 @@ bundle: tour_schedule
 label: 'Tour Schedule'
 description: 'Default Tour Schedule web-form to display on request a tour page. Change this value only if necessary.'
 required: true
-translatable: false
+translatable: true
 default_value:
   -
     default_data: ''
