[OYPD-408] Anonymous should not see Session, Alert, Activity, or Membership pages; and should only see Branch pages that are not coming soon.

--- a/composer.json
+++ b/composer.json
@@ -175,6 +175,7 @@
         "drupal/simple_sitemap": "^2.8",
         "drupal/redirect": "^1.0@alpha",
         "drupal/metatag": "^1.0",
-        "drupal/google_tag": "1.x-dev"
+        "drupal/google_tag": "1.x-dev",
+        "drupal/rabbit_hole": "1.0-beta3"
     }
 }
