--- a/modules/openy_features/openy_node/modules/openy_node_mbrshp/config/install/core.entity_form_display.node.membership.default.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_mbrshp/config/install/core.entity_form_display.node.membership.default.yml
@@ -22,6 +22,7 @@ content:
     weight: 4
     settings: {  }
     third_party_settings: {  }
+    region: content
   field_mbrshp_description:
     weight: 1
     settings:
@@ -29,6 +30,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: text_textarea
+    region: content
   field_mbrshp_image:
     weight: 2
     settings:
@@ -41,6 +43,7 @@ content:
       field_widget_display_settings: {  }
     third_party_settings: {  }
     type: entity_browser_entity_reference
+    region: content
   field_mbrshp_info:
     type: entity_reference_paragraphs
     weight: 26
@@ -51,23 +54,27 @@ content:
       add_mode: dropdown
       form_display_mode: default
     third_party_settings: {  }
+    region: content
   path:
     type: path
     weight: 7
     settings: {  }
     third_party_settings: {  }
+    region: content
   promote:
     type: boolean_checkbox
     settings:
       display_label: true
     weight: 5
     third_party_settings: {  }
+    region: content
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
     weight: 6
     third_party_settings: {  }
+    region: content
   title:
     type: string_textfield
     weight: 0
@@ -75,6 +82,7 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    region: content
   uid:
     type: entity_reference_autocomplete
     weight: 3
@@ -83,4 +91,5 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    region: content
 hidden: {  }
