--- a/modules/openy_features/openy_node/modules/openy_node_mbrshp/config/install/core.entity_view_display.node.membership.teaser.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_mbrshp/config/install/core.entity_view_display.node.membership.teaser.yml
@@ -16,6 +16,7 @@ mode: teaser
 content:
   links:
     weight: 100
+    region: content
 hidden:
   field_mbrshp_description: true
   field_mbrshp_image: true
