--- a/modules/openy_features/openy_node/modules/openy_node_activity/openy_node_activity.info.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_activity/openy_node_activity.info.yml
@@ -10,6 +10,7 @@ dependencies:
   - openy_node_category
   - path
   - pathauto
+  - rabbit_hole
   - text
   - user
-version: 8.x-1.0
+version: 8.x-1.1
