--- a/modules/openy_features/openy_user/config/install/user.role.editor.yml
+++ b/modules/openy_features/openy_user/config/install/user.role.editor.yml
@@ -6,143 +6,144 @@ label: Editor
 weight: 4
 is_admin: null
 permissions:
-  0: 'use draft_draft transition'
-  1: 'use published_draft transition'
-  2: 'use archived_draft transition'
-  3: 'view the administration theme'
-  6: 'use published_archived transition'
-  7: 'use draft_needs_review transition'
-  8: 'use needs_review_draft transition'
-  9: 'use draft_published transition'
-  10: 'use needs_review_published transition'
-  11: 'use archived_published transition'
-  12: 'access media overview'
-  13: 'create media'
-  14: 'delete any media'
-  15: 'delete media'
-  16: 'update any media'
-  17: 'update media'
-  18: 'view media'
-  19: 'access content overview'
-  20: 'administer nodes'
-  21: 'revert all revisions'
-  22: 'view all revisions'
-  23: 'view own unpublished content'
-  28: 'create alert content'
-  29: 'delete any alert content'
-  30: 'delete own alert content'
-  31: 'edit any alert content'
-  32: 'edit own alert content'
-  33: 'create announcement content'
-  34: 'delete any announcement content'
-  35: 'delete own announcement content'
-  36: 'edit any announcement content'
-  37: 'edit own announcement content'
-  38: 'create blog_post content'
-  39: 'delete any blog_post content'
-  40: 'delete own blog_post content'
-  41: 'edit any blog_post content'
-  42: 'edit own blog_post content'
-  43: 'create branch content'
-  44: 'delete any branch content'
-  45: 'delete own branch content'
-  46: 'edit any branch content'
-  47: 'edit own branch content'
-  48: 'create camp content'
-  49: 'delete any camp content'
-  50: 'delete own camp content'
-  51: 'edit any camp content'
-  52: 'edit own camp content'
-  58: 'create facility content'
-  59: 'delete any facility content'
-  60: 'delete own facility content'
-  61: 'edit any facility content'
-  62: 'edit own facility content'
-  63: 'create landing_page content'
-  64: 'delete any landing_page content'
-  65: 'delete own landing_page content'
-  66: 'edit any landing_page content'
-  67: 'edit own landing_page content'
-  68: 'create membership content'
-  69: 'delete any membership content'
-  70: 'delete own membership content'
-  71: 'edit any membership content'
-  72: 'edit own membership content'
-  73: 'create program content'
-  74: 'delete any program content'
-  75: 'delete own program content'
-  76: 'edit any program content'
-  77: 'edit own program content'
-  78: 'create program_subcategory content'
-  79: 'delete any program_subcategory content'
-  80: 'delete own program_subcategory content'
-  81: 'edit any program_subcategory content'
-  82: 'edit own program_subcategory content'
-  88: 'use needs_review_needs_review transition'
-  89: 'use published_published transition'
-  91: 'access site in maintenance mode'
-  92: 'access toolbar'
-  93: 'access images_library entity browser pages'
-  94: 'access media_embed entity browser pages'
-  95: 'access media_library entity browser pages'
-  96: 'dropzone upload files'
-  97: 'use text format full_html'
-  98: 'view moderation states'
-  101: 'revert alert revisions'
-  102: 'view alert revisions'
-  103: 'revert announcement revisions'
-  104: 'view announcement revisions'
-  105: 'revert blog_post revisions'
-  106: 'view blog_post revisions'
-  107: 'revert branch revisions'
-  108: 'view branch revisions'
-  109: 'revert camp revisions'
-  110: 'view camp revisions'
-  113: 'revert facility revisions'
-  114: 'view facility revisions'
-  115: 'revert landing_page revisions'
-  116: 'view landing_page revisions'
-  117: 'revert membership revisions'
-  118: 'view membership revisions'
-  119: 'revert program revisions'
-  120: 'view program revisions'
-  121: 'revert program_subcategory revisions'
-  122: 'view program_subcategory revisions'
-  125: 'view any unpublished content'
-  126: 'view latest version'
-  128: 'view any unpublished activity content'
-  129: 'view any unpublished alert content'
-  130: 'view any unpublished announcement content'
-  131: 'view any unpublished blog_post content'
-  132: 'view any unpublished branch content'
-  133: 'view any unpublished camp content'
-  134: 'view any unpublished class content'
-  135: 'view any unpublished facility content'
-  136: 'view any unpublished landing_page content'
-  137: 'view any unpublished membership content'
-  138: 'view any unpublished program content'
-  139: 'view any unpublished program_subcategory content'
-  140: 'view any unpublished session content'
-  141: 'access documents_library entity browser pages'
-  142: 'access documents_library_embed entity browser pages'
-  143: 'access images_library_embed entity browser pages'
-  144: 'access videos_library entity browser pages'
-  145: 'access videos_library_embed entity browser pages'
-  146: 'use text format full_html'
-  147: 'create blog content'
-  148: 'edit own blog content'
-  149: 'view blog revisions'
-  150: 'administer taxonomy'
-  151: 'delete terms in area'
-  152: 'edit terms in area'
-  153: 'delete terms in blog_category'
-  154: 'edit terms in blog_category'
-  155: 'delete terms in color'
-  156: 'edit terms in color'
-  157: 'delete terms in facility_type'
-  158: 'edit terms in facility_type'
-  159: 'delete terms in media_tags'
-  160: 'edit terms in media_tags'
-  161: 'administer menu'
-  162: 'access tour'
-  163: 'access structure page'
+  - 'access content overview'
+  - 'access documents_library entity browser pages'
+  - 'access documents_library_embed entity browser pages'
+  - 'access images_library entity browser pages'
+  - 'access images_library_embed entity browser pages'
+  - 'access media overview'
+  - 'access media_embed entity browser pages'
+  - 'access media_library entity browser pages'
+  - 'access site in maintenance mode'
+  - 'access structure page'
+  - 'access toolbar'
+  - 'access tour'
+  - 'access videos_library entity browser pages'
+  - 'access videos_library_embed entity browser pages'
+  - 'administer menu'
+  - 'administer nodes'
+  - 'administer taxonomy'
+  - 'create alert content'
+  - 'create announcement content'
+  - 'create blog content'
+  - 'create blog_post content'
+  - 'create branch content'
+  - 'create camp content'
+  - 'create facility content'
+  - 'create landing_page content'
+  - 'create media'
+  - 'create membership content'
+  - 'create program content'
+  - 'create program_subcategory content'
+  - 'delete any alert content'
+  - 'delete any announcement content'
+  - 'delete any blog_post content'
+  - 'delete any branch content'
+  - 'delete any camp content'
+  - 'delete any facility content'
+  - 'delete any landing_page content'
+  - 'delete any media'
+  - 'delete any membership content'
+  - 'delete any program content'
+  - 'delete any program_subcategory content'
+  - 'delete media'
+  - 'delete own alert content'
+  - 'delete own announcement content'
+  - 'delete own blog_post content'
+  - 'delete own branch content'
+  - 'delete own camp content'
+  - 'delete own facility content'
+  - 'delete own landing_page content'
+  - 'delete own membership content'
+  - 'delete own program content'
+  - 'delete own program_subcategory content'
+  - 'delete terms in area'
+  - 'delete terms in blog_category'
+  - 'delete terms in color'
+  - 'delete terms in facility_type'
+  - 'delete terms in media_tags'
+  - 'dropzone upload files'
+  - 'edit any alert content'
+  - 'edit any announcement content'
+  - 'edit any blog_post content'
+  - 'edit any branch content'
+  - 'edit any camp content'
+  - 'edit any facility content'
+  - 'edit any landing_page content'
+  - 'edit any membership content'
+  - 'edit any program content'
+  - 'edit any program_subcategory content'
+  - 'edit own alert content'
+  - 'edit own announcement content'
+  - 'edit own blog content'
+  - 'edit own blog_post content'
+  - 'edit own branch content'
+  - 'edit own camp content'
+  - 'edit own facility content'
+  - 'edit own landing_page content'
+  - 'edit own membership content'
+  - 'edit own program content'
+  - 'edit own program_subcategory content'
+  - 'edit terms in area'
+  - 'edit terms in blog_category'
+  - 'edit terms in color'
+  - 'edit terms in facility_type'
+  - 'edit terms in media_tags'
+  - 'rabbit hole bypass node'
+  - 'revert alert revisions'
+  - 'revert all revisions'
+  - 'revert announcement revisions'
+  - 'revert blog_post revisions'
+  - 'revert branch revisions'
+  - 'revert camp revisions'
+  - 'revert facility revisions'
+  - 'revert landing_page revisions'
+  - 'revert membership revisions'
+  - 'revert program revisions'
+  - 'revert program_subcategory revisions'
+  - 'update any media'
+  - 'update media'
+  - 'use archived_draft transition'
+  - 'use archived_published transition'
+  - 'use draft_draft transition'
+  - 'use draft_needs_review transition'
+  - 'use draft_published transition'
+  - 'use needs_review_draft transition'
+  - 'use needs_review_needs_review transition'
+  - 'use needs_review_published transition'
+  - 'use published_archived transition'
+  - 'use published_draft transition'
+  - 'use published_published transition'
+  - 'use text format full_html'
+  - 'use text format full_html'
+  - 'view alert revisions'
+  - 'view all revisions'
+  - 'view announcement revisions'
+  - 'view any unpublished activity content'
+  - 'view any unpublished alert content'
+  - 'view any unpublished announcement content'
+  - 'view any unpublished blog_post content'
+  - 'view any unpublished branch content'
+  - 'view any unpublished camp content'
+  - 'view any unpublished class content'
+  - 'view any unpublished content'
+  - 'view any unpublished facility content'
+  - 'view any unpublished landing_page content'
+  - 'view any unpublished membership content'
+  - 'view any unpublished program content'
+  - 'view any unpublished program_subcategory content'
+  - 'view any unpublished session content'
+  - 'view blog revisions'
+  - 'view blog_post revisions'
+  - 'view branch revisions'
+  - 'view camp revisions'
+  - 'view facility revisions'
+  - 'view landing_page revisions'
+  - 'view latest version'
+  - 'view media'
+  - 'view membership revisions'
+  - 'view moderation states'
+  - 'view own unpublished content'
+  - 'view program revisions'
+  - 'view program_subcategory revisions'
+  - 'view the administration theme'
