--- a/ygh_programs_search.services.yml
+++ b/ygh_programs_search.services.yml
@@ -4,7 +4,7 @@ services:
   ygh_programs_search.cache:
     class: Drupal\Core\Cache\CacheBackendInterface
     factory: cache_factory:get
-    arguments: [default]
+    arguments: [ygh_programs_search]
   ygh_programs_search.data_storage:
     class: Drupal\ygh_programs_search\DataStorage
     arguments: ['@daxko.client', '@ygh_programs_search.cache', '@http_client', '@ygh_programs_search.crawler']
