--- a/config/install/core.entity_view_display.node.event.listing_teaser.yml
+++ b/config/install/core.entity_view_display.node.event.listing_teaser.yml
@@ -5,6 +5,7 @@ dependencies:
     - core.entity_view_mode.node.listing_teaser
     - field.field.node.event.field_event_date_range
     - field.field.node.event.field_landing_body
+    - field.field.node.event.field_location_ref
     - field.field.node.event.field_sidebar_content
     - field.field.node.event.rng_capacity
     - field.field.node.event.rng_registrants_duplicate
@@ -43,9 +44,16 @@ content:
     third_party_settings: {  }
   field_landing_body:
     type: ygh_paragraphs_preview_formatter
-    weight: 1
+    weight: 2
     label: hidden
     settings: {  }
+    third_party_settings: {  }
+  field_location_ref:
+    type: entity_reference_label
+    weight: 1
+    label: hidden
+    settings:
+      link: true
     third_party_settings: {  }
 hidden:
   field_sidebar_content: true
