--- a/openy.info.yml
+++ b/openy.info.yml
@@ -111,6 +111,7 @@ dependencies:
   - openy_prgf_gallery
   - openy_prgf_teaser
   - openy_prgf_classes_listing
+  - openy_prgf_class_sessions
   - openy_prgf_blog_latest
   - openy_prgf_blog_camp
   - openy_prgf_blog_branch
