--- a/config/install/field.field.node.branch.field_header_content.yml
+++ b/config/install/field.field.node.branch.field_header_content.yml
@@ -5,6 +5,7 @@ dependencies:
     - field.storage.node.field_header_content
     - node.type.branch
     - paragraphs.paragraphs_type.all_amenities
+    - paragraphs.paragraphs_type.group_schedules
     - paragraphs.paragraphs_type.header
     - paragraphs.paragraphs_type.small_banner
   module:
@@ -26,6 +27,7 @@ settings:
       header: header
       all_amenities: all_amenities
       small_banner: small_banner
+      group_schedules: group_schedules
     target_bundles_drag_drop:
       1c:
         weight: -39
@@ -84,4 +86,40 @@ settings:
       small_banner:
         enabled: true
         weight: -21
+      all_events:
+        weight: 36
+        enabled: false
+      all_testimonials:
+        weight: 37
+        enabled: false
+      camp_menu:
+        weight: 39
+        enabled: false
+      content_pager:
+        weight: 41
+        enabled: false
+      financial_aid:
+        weight: 43
+        enabled: false
+      group_schedules:
+        enabled: true
+        weight: 46
+      membership_info:
+        weight: 51
+        enabled: false
+      openy_event_registration:
+        weight: 52
+        enabled: false
+      panorama:
+        weight: 53
+        enabled: false
+      prgf_location_finder:
+        weight: 54
+        enabled: false
+      prgf_location_finder_filters:
+        weight: 55
+        enabled: false
+      tour_schedule:
+        weight: 59
+        enabled: false
 field_type: entity_reference_revisions
