--- a/openy_node_branch.info.yml
+++ b/openy_node_branch.info.yml
@@ -30,6 +30,7 @@ dependencies:
   - openy_prgf_blackbaud
   - openy_prgf_fc
   - openy_prgf_fin
+  - openy_prgf_group_schedules
   - openy_prgf_header
   - openy_prgf_panorama
   - openy_prgf_simple_content
@@ -45,4 +46,4 @@ dependencies:
   - text
   - user
   - views
-version: 8.x-1.4
+version: 8.x-1.5
