--- a/openy_prgf_all_events/config/install/views.view.events_default.yml
+++ b/openy_prgf_all_events/config/install/views.view.events_default.yml
@@ -6,7 +6,9 @@ dependencies:
   module:
     - better_exposed_filters
     - search_api
+    - search_api_views_reference
     - views_infinite_scroll
+    - ygh_alters
 id: events_default
 label: 'Events default'
 module: views
@@ -26,7 +28,7 @@ display:
         type: none
         options: {  }
       cache:
-        type: tag
+        type: search_api_tags
         options: {  }
       query:
         type: views_query
@@ -49,6 +51,14 @@ display:
               secondary_label: 'Advanced options'
               autosubmit: false
               autosubmit_hide: false
+            field_location_ref:
+              bef_format: default
+              more_options:
+                bef_select_all_none: false
+                bef_collapsible: false
+                is_secondary: false
+                rewrite:
+                  filter_rewrite_values: ''
             field_event_date_range:
               bef_format: bef_datepicker
               more_options:
@@ -61,7 +71,7 @@ display:
                 is_secondary: false
                 rewrite:
                   filter_rewrite_values: ''
-            search_api_fulltext:
+            rendered_item:
               bef_format: default
               more_options:
                 is_secondary: false
@@ -165,7 +175,7 @@ display:
           value:
             min: ''
             max: ''
-            value: now
+            value: today
             type: offset
           group: 1
           exposed: false
@@ -268,6 +278,46 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           plugin_id: search_api_boolean
+        field_location_ref:
+          id: field_location_ref
+          table: search_api_index_node_events
+          field: field_location_ref
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: or
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: field_location_ref_op
+            label: 'Show me events for:'
+            description: ''
+            use_operator: false
+            operator: field_location_ref_op
+            identifier: field_location_ref
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+            reduce: 0
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: 0
+          plugin_id: search_api_reference
         field_event_date_range:
           id: field_event_date_range
           table: search_api_index_node_events
@@ -352,23 +402,26 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           plugin_id: search_api_date
-        search_api_fulltext:
-          id: search_api_fulltext
+        rendered_item:
+          id: rendered_item
           table: search_api_index_node_events
-          field: search_api_fulltext
+          field: rendered_item
           relationship: none
           group_type: group
           admin_label: ''
-          operator: and
-          value: ''
+          operator: '='
+          value:
+            min: ''
+            max: ''
+            value: ''
           group: 1
           exposed: true
           expose:
-            operator_id: search_api_fulltext_op
+            operator_id: rendered_item_op
             label: ''
             description: ''
             use_operator: false
-            operator: search_api_fulltext_op
+            operator: rendered_item_op
             identifier: search_api_fulltext
             required: false
             remember: false
@@ -389,10 +442,7 @@ display:
             default_group: All
             default_group_multiple: {  }
             group_items: {  }
-          parse_mode: terms
-          min_length: null
-          fields: {  }
-          plugin_id: search_api_fulltext
+          plugin_id: search_api_text
       sorts:
         field_event_date_range:
           id: field_event_date_range
@@ -416,8 +466,9 @@ display:
         operator: AND
         groups:
           1: AND
+      use_ajax: true
     cache_metadata:
-      max-age: -1
+      max-age: 0
       contexts:
         - 'languages:language_interface'
         - url
