[OYPD-24] Create new feature module to contain webform paragraph config

--- a/modules/openy_features/openy_prgf/modules/openy_prgf_webform/config/install/core.entity_view_display.paragraph.webform.default.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_webform/config/install/core.entity_view_display.paragraph.webform.default.yml
@@ -13,7 +13,7 @@ mode: default
 content:
   field_webform_webform:
     weight: 0
-    label: hidden
+    label: above
     settings: {  }
     third_party_settings: {  }
     type: webform_entity_reference_entity_view
