--- a/modules/openy_features/openy_prgf/modules/openy_prgf_webform/config/install/field.field.paragraph.webform.field_webform_webform.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_webform/config/install/field.field.paragraph.webform.field_webform_webform.yml
@@ -15,7 +15,7 @@ id: paragraph.webform.field_webform_webform
 field_name: field_webform_webform
 entity_type: paragraph
 bundle: webform
-label: 'Embedded Webform'
+label: Webform
 description: ''
 required: false
 translatable: false
