--- a/openy.info.yml
+++ b/openy.info.yml
@@ -123,6 +123,7 @@ dependencies:
   - openy_prgf_loc_finder
   - openy_prgf_mbrshp_calc
   - openy_prgf_embedded_groupexpro_schedule
+  - openy_prgf_webform
   - openy_node_activity
   - openy_node_class
   - openy_node_session
